--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 converter <b>para</b>
                 <select name="euro" id="euro">
                     <div class="box-option-euro">
-                        <option>€ <span>Euro</span></option>
                         <option>US$ <span>Dolar americano</span></option>
+                        <option>€ <span>Euro</span></option>
                         <option>£ Libras</option>
                     </div>
                 </select>
@@ -39,7 +39,7 @@
                 <input type="text" placeholder="R$ 0.00" name="converted-value" value="R$" id="converted-value">
             </label>
 
-            <button>Converter</button>
+            <button class="convertButton">Converter</button>
         </section>
 
         <section class="converted">
@@ -59,5 +59,5 @@
         </section>
     </main>
 </body>
-
+<script src="scripts.js"></script>
 </html>
